--- a/CSS/style.css
+++ b/CSS/style.css
@@ -935,11 +935,11 @@ swiper-slide:hover .slide-pos {
 .btn-explore {
     transition: all 0.7s !important;
 
-    padding: 10px;
+    padding: 9px  11px!important;
     color: white;
     border: none;
     border-radius: 30px;
-    font-size: 18px;
+    font-size: 15px;
     font-weight: 600 !important;
     background-color: var(--bg-color);
 }
