--- a/CSS/style.css
+++ b/CSS/style.css
@@ -892,22 +892,6 @@ swiper-slide:hover .slide-pos {
 
 /* 
  PAGES CSS */
-.cardsss:hover {
-
-    height: 600px;
-}
-
-@media (max-width:992px) {
-    .cardsss:hover {
-
-        height: 530px !important;
-    }
-
-}
-
-
-
-
 .head-2 {
     transition: all 0.7s !important;
 }
@@ -917,7 +901,7 @@ swiper-slide:hover .slide-pos {
 }
 
 .cardsss {
-    height: 160px;
+
     transition: all 0.7s !important;
     border-radius: 10px;
     padding: 14px 10px;
@@ -934,13 +918,28 @@ swiper-slide:hover .slide-pos {
     border-radius: 30px;
     background-color: var(--bg-color);
 }
-
+.ex-cion{
+    transition:all 0.9s !important;
+left: 0%;
+height: 100%;
+top: 0%;
+background-color: var(--color1);
+    width: 0%;
+    border-radius: 30px;
+color: white !important;
+    overflow: hidden;
+    position: absolute  ;
+}
+.cardsss:hover .ex-cion{
+    width: 100%;
+color: white !important;
+}
 .btn-explore {
-    transition:ease-in-out 0.9s !important;
+    padding: 10px;
+    transition:ease-in-out 0.2s !important;
    
     color: white;
-    height: 25px;
-    width: 10px;
+
     position: relative !important;
     border: none;
     /* border: 1px solid red; */
