--- a/CSS/style.css
+++ b/CSS/style.css
@@ -583,6 +583,10 @@ input {
 }
 
 footer {
+    background-size: cover;
+    object-fit: cover;
+    background-position: center;
+    background-image: url("/Assets/Banner-Image/banner-img-10.png");
     background-color: var(--bg-color) !important;
 }
 
@@ -960,4 +964,7 @@ color: white !important;
     font-size: 15px;
     font-weight: 600 !important;
     background-color: var(--bg-color);
+}
+.col-33{
+    position: static !important;
 }
