--- a/CSS/style.css
+++ b/CSS/style.css
@@ -967,8 +967,80 @@ color: white !important;
 }
 .sticky-element {
     position: sticky;
-    height: 125vh !important;
-    top: 3%;  
+    height: 130vh !important;
+    top: 2%;  
 
     z-index: 10; 
   }
+  .product-img{
+    position: relative;
+  }
+  /* .line {
+    transition: 10.8s all !important;
+    position: absolute;
+    top: 0%;
+    background-color: rgba(255, 255, 255, 0.253);
+    height: 85%;
+    width: 10%;
+    transform: rotate(10deg);
+    left: 0%;
+    animation: moveline 1s linear infinite;
+}
+
+@keyframes moveline {
+    0% {
+        left: 0%;
+    }
+    100% {
+        left: 90%; 
+    }
+} */
+
+.ser-img-1{
+    object-fit: cover !important;
+    background-position: center !important;
+    background-size: cover !important;
+    height: 250px !important;
+}
+.border-radious{
+    border-radius: 20px !important;
+}
+/* ACCORDIAN */
+.accordion {
+    background-color: var(--bg-color);
+    color:white;
+    margin: 2px 0px;
+    cursor: pointer;
+    padding: 18px;
+    width: 100%;
+    border: none;
+    text-align: left;
+    outline: none;
+    /* font-size: 15px; */
+    transition: 0.4s;
+  }
+  
+  .active, .accordion:hover {
+    background-color: var(--color1);
+  }
+  
+  .accordion:after {
+    content: '\002B';
+    color: #777;
+    font-weight: bold;
+    float: right;
+    margin-left: 5px;
+  }
+  
+  .active:after {
+    content: "\2212";
+  }
+  
+  .panel {
+    padding: 0 18px;
+    background-color: white;
+    max-height: 0;
+    overflow: hidden;
+    transition: max-height 0.2s ease-out;
+  }
+/* ACCORDIAN */
