--- a/CSS/style.css
+++ b/CSS/style.css
@@ -900,23 +900,27 @@ swiper-slide:hover .slide-pos {
 .head-2 {
     transition: all 0.7s !important;
 }
-#phone{
+
+#phone {
 
     font-family: var(--font-family-play);
-    background-color:var(--bg-color);
+    background-color: var(--bg-color);
     padding: 10px;
 
     border: none;
     border-radius: 2px;
 }
+
 .col-org {
     color: var(--color1) !important;
 }
-.col-9>{
+
+.col-9> {
     font-family: var(--font-family-play) !important;
 }
+
 .cardsss {
-/* height: 140px; */
+    /* height: 140px; */
     transition: all 0.7s !important;
     border-radius: 10px;
     padding: 14px 10px;
@@ -933,28 +937,30 @@ swiper-slide:hover .slide-pos {
     border-radius: 30px;
     background-color: var(--bg-color);
 }
-.ex-cion{
-    transition:all 0.9s !important;
-left: 0%;
-height: 100%;
-top: 0%;
-background-color: var(--color1);
+
+.ex-cion {
+    transition: all 0.9s !important;
+    left: 0%;
+    height: 100%;
+    top: 0%;
+    background-color: var(--color1);
     width: 0%;
     border-radius: 30px;
-color: white !important;
+    color: white !important;
     overflow: hidden;
-    position: absolute  ;
+    position: absolute;
 }
-.cardsss:hover .ex-cion{
+
+.cardsss:hover .ex-cion {
     width: 100%;
 
-color: white !important;
+    color: white !important;
 }
 
 .btn-explore {
     padding: 10px;
-    transition:ease-in-out 0.2s !important;
-   
+    transition: ease-in-out 0.2s !important;
+
     color: white;
 
     position: relative !important;
@@ -965,17 +971,22 @@ color: white !important;
     font-weight: 600 !important;
     background-color: var(--bg-color);
 }
-.sticky-element {
-    position: sticky;
-    height: 130vh !important;
-    top: 2%;  
 
-    z-index: 10; 
-  }
-  .product-img{
+@media (min-width:992px) {
+    .sticky-element {
+        position: sticky !important;
+        height: 130vh !important;
+        top: 2%;
+
+        z-index: 10;
+    }
+}
+
+.product-img {
     position: relative;
-  }
-  /* .line {
+}
+
+/* .line {
     transition: 10.8s all !important;
     position: absolute;
     top: 0%;
@@ -996,20 +1007,23 @@ color: white !important;
     }
 } */
 
-.ser-img-1{
+.ser-img-1 {
     object-fit: cover !important;
     background-position: center !important;
     background-size: cover !important;
     height: 250px !important;
 }
-.border-radious{
+
+.border-radious {
     border-radius: 20px !important;
 }
+
 /* ACCORDIAN */
 .accordion {
     background-color: var(--bg-color);
-    color:white;
+    color: white;
     margin: 2px 0px;
+    border-radius: 20px;
     cursor: pointer;
     padding: 18px;
     width: 100%;
@@ -1018,29 +1032,38 @@ color: white !important;
     outline: none;
     /* font-size: 15px; */
     transition: 0.4s;
-  }
-  
-  .active, .accordion:hover {
+}
+
+.active,
+.accordion:hover {
     background-color: var(--color1);
-  }
-  
-  .accordion:after {
+}
+
+.accordion:after {
     content: '\002B';
     color: #777;
     font-weight: bold;
     float: right;
     margin-left: 5px;
-  }
-  
-  .active:after {
+}
+
+.active:after {
     content: "\2212";
-  }
-  
-  .panel {
+}
+
+.panel {
     padding: 0 18px;
     background-color: white;
     max-height: 0;
     overflow: hidden;
     transition: max-height 0.2s ease-out;
-  }
+}
+
 /* ACCORDIAN */
+
+.ser-img-2{
+    background-position:left !important;
+    object-fit: cover;
+    background-size: cover;
+    height: 60vh !important ;
+}
