--- a/CSS/style.css
+++ b/CSS/style.css
@@ -14,7 +14,7 @@
 }
 
 body {
-    color: rgb(48, 48, 48) !important;
+   color: rgb(48, 48, 48) !important;
     font-weight: 700 !important;
     font-family: var(--font-family) !important;
 }
@@ -120,17 +120,39 @@ body {
 
 .navbar {
 
-    z-index: 1111;
-
-    border-bottom: 1px solid var(--border-col);
+background-color: transparent;
+    z-index: 1111 !important;
+position: absolute !important;
+top: 0%;
+left: 0%;
+    border-bottom: 1px solid rgba(255, 255, 255, 0.158) ;
     transition: 0.4s ease-in-out !important;
 }
-
+.nav-item>a{
+    color:white ;
+}
+.nav-sec-col{
+    color: var(--color1) !important;
+}
 #topbtn {
     font-size: 24px !important;
 
 }
-
+.main1{
+    position: relative;
+height: 97vh;
+    margin: 0px;
+    padding: 0px;
+ 
+}
+.banner-img{
+    top: 0% !important;
+    left: 0%;
+height: 100%;
+    object-fit: cover;
+    z-index: -1;
+    position: absolute !important;
+}
 .topbtnfix {
     color: white;
     padding: 15px 10px !important;
@@ -189,9 +211,10 @@ body {
 .btn-red {
 
     border-radius: 50% !important;
-    border: 1px solid var(--color1) !important;
-    color: var(--color1) !important;
-    background-color: transparent !important;
+    border: 1px solid white;
+    color:white ;
+    padding:6px 10px;
+    background-color: transparent;
 }
 
 .arr {
@@ -239,11 +262,15 @@ body {
 
 @media (max-width:992px) {
     .banner-btn {
+        display: none !important;
         border-radius: 0% !important;
         padding: 5px !important;
     }
 }
-
+.icon-fixeds{
+border: 1px solid var(--color1) !important;
+    color: var(--color1)!important;
+}
 .offcanvas {
     z-index: 1111 !important;
 }
@@ -264,6 +291,7 @@ body {
     width: 0%;
     height: 0%;
     opacity: 0;
+    left: 0%;
     z-index: 1;
 
 }
@@ -837,11 +865,9 @@ swiper-slide:hover .slide-pos {
 
 }
 
-.nav-item>.nav-link {
-    color: #2e2e2ec5;
-    transition: 0.6s ease-in-out !important
+.nav-item>.nav-link{
+    color: white;
 }
-
 .nav-item>.nav-link:hover {
     color: var(--color1) !important;
 }
@@ -1079,3 +1105,7 @@ swiper-slide:hover .slide-pos {
     content: "" !important; /* Remove placeholder text when a valid date is selected */
   }
 /* date picker */
+
+.z-1{
+    z-index: -1;
+}
