--- a/CSS/style.css
+++ b/CSS/style.css
@@ -14,8 +14,8 @@
 }
 
 body {
-    color: rgb(48, 48, 48) !important;
-    font-weight: 700 !important;
+  
+background-color: #811f1000 !important;
     font-family: var(--font-family) !important;
 }
 
@@ -150,15 +150,22 @@ body {
     margin: 0px;
     padding: 0px;
 
+
 }
 
+
 .banner-img {
-    top: 0% !important;
-    left: 0%;
-    height: 100%;
-    object-fit: cover;
-    z-index: -1;
     position: absolute !important;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    z-index: -1;
+    object-fit: cover;
+    background-attachment: fixed !important;
+    background-position: center;
+    background-size: cover;
+    animation: fn 7.5s ease-in-out infinite;
 }
 
 .topbtnfix {
@@ -183,17 +190,18 @@ body {
     /* background-color: #bb9108 !important; */
     position: absolute !important;
     top: 0px;
-    width: 0%;
+    width: 100%;
     color: var(--golden-color) !important;
     z-index: -22 !important;
     bottom: 0px;
-
     transition: 0.5s ease-in-out !important;
-
+    
     border-bottom: 2px solid var(--golden-color);
 }
 
 .nav-item:hover .navhover {
+    height: 100%;
+    /* background-color: var(--color1); */
     top: 0px !important;
     width: 100% !important;
 }
@@ -1175,16 +1183,21 @@ swiper-slide:hover .slide-pos {
     height: 80vh;
     width: 100%;
     background-repeat: no-repeat;
-object-fit: cover;
+    object-fit: cover;
     background-position: center !important;
-    } input,.form-control{
+}
+
+input,
+.form-control {
     border: 1px solid rgb(196, 196, 196) !important;
     background-color: white !important;
 
-  }
-  .phonenum{
+}
+
+.phonenum {
     color: black !important;
-  }
-  .form-control::placeholder{
+}
+
+.form-control::placeholder {
     color: black !important;
-  }
+}
