--- a/CSS/style.css
+++ b/CSS/style.css
@@ -852,6 +852,8 @@ swiper-slide:hover .slide-pos {
 }
 
 .dropdown-menu {
+    height: 0% !important;
+
     transition: 0.5s ease-in-out !important;
     transform: rotateX(90deg) !important;
 }
@@ -871,13 +873,13 @@ swiper-slide:hover .slide-pos {
 }
 
 .dropdown-menu {
-    display: block !important;
     padding: 14px !important;
     background-color: var(--color1) !important;
 }
 
 .dropdown:hover .dropdown-menu {
-
+    display: block !important;
+height: 200px !important;
     transform: rotateX(0deg) !important;
 
 }
