--- a/CSS/style.css
+++ b/CSS/style.css
@@ -120,7 +120,7 @@ background-color: #811f1000 !important;
 
 .navbar {
 
-    background-color: transparent;
+    background-color: rgb(255, 255, 255);
     z-index: 1111 !important;
     position: absolute !important;
     top: 0%;
@@ -130,7 +130,7 @@ background-color: #811f1000 !important;
 }
 
 .nav-item>a {
-    color: white;
+    color:  #4b4b4b !important;
 }
 
 .nav-sec-col {
@@ -227,13 +227,13 @@ background-color: #811f1000 !important;
     background-color: var(--color1) !important;
 }
 
-@media (max-width:992px) {}
+
 
 .btn-red {
 
     border-radius: 50% !important;
-    border: 1px solid white;
-    color: white;
+    border: 1px solid var(--color1);
+    color: var(--color1);
     padding: 6px 10px;
     background-color: transparent;
 }
