--- a/CSS/style.css
+++ b/CSS/style.css
@@ -1,9 +1,10 @@
 @import url('https://fonts.googleapis.com/css2?family=Raleway:ital,wght@0,100..900;1,100..900&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Play:wght@400;700&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Nunito:ital,wght@0,200..1000;1,200..1000&display=swap');
-
+@import url('https://fonts.googleapis.com/css2?family=DM+Sans:ital,opsz,wght@0,9..40,100..1000;1,9..40,100..1000&display=swap');
 :root {
-    --font-family: "Nunito", serif;
+    --font-family:"DM Sans", serif;
+    --font-family-nunito: "Nunito", serif;
     --font-family-play: "Play", serif;
     --color1: #811f10;
     --para-color: #545454;
@@ -120,12 +121,12 @@ background-color: #811f1000 !important;
 
 .navbar {
 
-    background-color: rgb(255, 255, 255);
+    background-color: rgba(255, 255, 255, 0.979);
     z-index: 1111 !important;
     position: absolute !important;
     top: 0%;
     left: 0%;
-    border-bottom: 1px solid rgba(255, 255, 255, 0.158);
+    border-bottom: 1px solid rgba(0, 0, 0, 0.11);
     transition: 0.4s ease-in-out !important;
 }
 
@@ -308,6 +309,9 @@ background-color: #811f1000 !important;
     background-color: var(--bg-color);
     z-index: 1;
     transition: 0.7s ease-in-out !important;
+    transform:translate3d(120deg);
+/* perspective: 3d; */
+
 
 }
 
@@ -1152,7 +1156,11 @@ height: auto !important;
     object-fit: cover;
 
 }
-
+.home-im{
+    object-fit: cover !important;
+    background-size: cover !important;
+    background-position: right !important;
+}
 .home-img {
     z-index: -1;
     background-size: cover;
