--- a/CSS/style.css
+++ b/CSS/style.css
@@ -7,12 +7,13 @@
     --font-family: "DM Sans", serif;
     --font-family-nunito: "Nunito", serif;
     --font-family-play: "Play", serif;
-    --color1: #811f10;
+    --color1:#981b1f;
     --para-color: #545454;
-
+    
     --border-col: #1818182f;
     --bg-color: #1A1A1A;
     --color-round: rgba(220, 220, 220, 0.966);
+    /* --color1: #811f10; */
 }
 
 body {
