--- a/CSS/style.css
+++ b/CSS/style.css
@@ -198,8 +198,8 @@ body {
     color: var(--color1) !important;
     background-color: white;
     border: 2px solid var(--color1);
-    /* color: white !important; */
-    /* background-color:var(--color1) !important; */
+    transition: 0.9s ease-in-out !important;
+   
 }
 
 /* NAV-HOVER */
