--- a/CSS/style.css
+++ b/CSS/style.css
@@ -2,9 +2,10 @@
 @import url('https://fonts.googleapis.com/css2?family=Play:wght@400;700&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Nunito:ital,wght@0,200..1000;1,200..1000&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=DM+Sans:ital,opsz,wght@0,9..40,100..1000;1,9..40,100..1000&display=swap');
-
+@import url('https://fonts.googleapis.com/css2?family=Outfit:wght@100..900&display=swap');
 :root {
-    --font-family: "DM Sans", serif;
+    --font-family:"Outfit", serif;
+    --font-family-DM: "DM Sans", serif;
     --font-family-nunito: "Nunito", serif;
     --font-family-play: "Play", serif;
     --color1:#981b1f;
