--- a/CSS/style.css
+++ b/CSS/style.css
@@ -8,7 +8,8 @@
     --font-family-DM: "DM Sans", serif;
     --font-family-nunito: "Nunito", serif;
     --font-family-play: "Play", serif;
-    --color1:#981b1f;
+    /* --color1:#981b1f; */
+    --color1:#761114;
     --para-color: #545454;
     
     --border-col: #1818182f;
