--- a/CSS/style.css
+++ b/CSS/style.css
@@ -3,20 +3,26 @@
 @import url('https://fonts.googleapis.com/css2?family=Nunito:ital,wght@0,200..1000;1,200..1000&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=DM+Sans:ital,opsz,wght@0,9..40,100..1000;1,9..40,100..1000&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Outfit:wght@100..900&display=swap');
+@import url('https://fonts.cdnfonts.com/css/nexa');
+@import url('https://fonts.googleapis.com/css2?family=Kanit:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');
+@font-face {
+    font-family: dogwood ;
+    src: url("../Assets/font-family/Dogwood3.ttf");
+}
 :root {
     --font-family:"Outfit", serif;
     --font-family-DM: "DM Sans", serif;
     --font-family-nunito: "Nunito", serif;
     --font-family-play: "Play", serif;
-    /* --color1:#981b1f; */
+    --font-family-nexa: 'Nexa', sans-serif;
+    --font-family-dogwood:dogwood;
+    --font-family-kanit: "Kanit", serif;
     --color1:#761114;
     --para-color: #545454;
-    
     --border-col: #1818182f;
     --bg-color: #1A1A1A;
     --color-round: rgba(220, 220, 220, 0.966);
-    /* --color1: #811f10; */
-}
+  }
 
 body {
 
@@ -818,33 +824,6 @@ text-align: justify;
 
 /*  */
 
-swiper-container {
-    width: 100%;
-    height: 100%;
-}
-
-swiper-slide {
-    height: 100%;
-    padding: 10px;
-    text-align: justify;
-    font-size: 18px;
-    clip-path: polygon(0% 0%, 100% 0%, 100% 94%, 75% 94%, 75% 100%, 67% 95%, 0 95%);  background-color: var(--color1);
-
-}
-
-swiper-slide img {
-    display: block;
-    width: 100%;
-    height: 100%;
-    object-fit: cover;
-}
-
-swiper-slide:hover .slide-pos {
-    height: 20%;
-    transform: rotateX(0deg);
-
-}
-
 .slide-pos {
     transform: rotateX(-90deg);
     transition: 0.6s ease-in-out !important;
@@ -995,6 +974,8 @@ swiper-slide:hover .slide-pos {
  PAGES CSS */
 
 .head-2 {
+    font-weight: bolder !important;
+    font-family: var(--font-family-nexa) !important;
     transition: all 0.7s !important;
 }
 
@@ -1424,3 +1405,22 @@ transition: 0.3s ease-in-out;
   }
   
   /* MARQUE END */
+  /* MARQUE SLIDER START */
+
+
+  swiper-slide {
+    text-align: center;
+    font-size: 18px;
+    background: #fff;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+  }
+
+  swiper-slide img {
+    display: block;
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+  }
+  /* MARQUE SLIDER END */
